fix: resolve URL deprecation and remove unused imports and fields